# creamino

./: BCI2000Creamino.rar  CreaminoInterface.rar  CreaminoSimulink1.6.rar  LICENCE.md  README.md
Arduino/ADS1298_ArduinoDue/: ADS1298_ArduinoDue.ino
Arduino/libraries/ADS1298_Library/: ADS1298.cpp  ADS1298.h
HW/BOM/: BOM_ACTIVE_ELECTRODE.csv  BOM_CONVERSION_BOARD.csv  BOM_DAUGHTER_BOARD.csv
HW/GERBERS/ACTIVE_ELECTRODES/: Layer_8.drl  cam.drl  cam.rpt  pcb2.gbl  pcb2.gbo  pcb2.gbp  pcb2.gbs  pcb2.gko  pcb2.gtl  pcb2.gto  pcb2.gtp  pcb2.gts
HW/GERBERS/CREAMINO_ADAPTER/: cam.drl  cam.rpt  pcb2_assembly.gko  pcb3.gbl  pcb3.gbo  pcb3.gbp  pcb3.gbs  pcb3.gko  pcb3.gtl  pcb3.gto  pcb3.gtp  pcb3.gts
HW/GERBERS/CREAMINO_CONVERSION_BOARD/: Layer_3.drl  Layer_8.drl  cam.drl  cam.rpt  (+9 more)
SW/Arduino/: Instructions.md
SW/BCI2000Creamino/: CMakeLists.txt  CreaminoADC_1198.h  CreaminoADC_1298.cpp  CreaminoLib_1198.cpp  CreaminoLib_1198.h  CreaminoLib_1298.cpp  CreaminoLib_1298.h  Info.txt  Instructions.md  SerialLib.cpp  SerialLib.h
SW/BCI2000Creamino/creamino/: CMakeLists.txt  CreaminoADC.cpp.bak  CreaminoADC.h.bak  CreaminoLib.cpp  CreaminoLib.h  creaminoADC.cpp  creaminoADC.h
SW/CreaminoJavaInterface/: Calibration.csv  Instructions.md  Instructions.md.txt  build.xml
SW/CreaminoSimulink/: Calibration.csv  Creamino.m  CreaminoSimulinkModel.slx  CreaminoSimulinkModel.slx.r2014b  CreaminoSimulinkModel_sfun.mexw64  CreaminoStop.m  CreaminoWaitForData.m  DigitalFilter2.m  Initialize.m  Instructions.md  ResetCreamino.m  StartADS.m  Sync.m
SW/OpenVibeCreamino/: Instructions.md
(+81 files in other folders)
